08-gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver
spec:
  parentRefs:
    - name: webserver-gateway
  hostnames:
    - "student.enact-it.training"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webserver
          port: 80
